# uniffi-bindgen-cs

./: .gitmodules  Cargo.toml  README.md  test_bindings.sh
bindgen/: Cargo.toml
bindgen/src/gen_cs/: executor.rs  mod.rs
bindgen/templates/: AsyncTypes.cs  CallbackInterfaceRuntime.cs  CallbackInterfaceTemplate.cs  EnumTemplate.cs  ErrorTemplate.cs  ForeignExecutorTemplate.cs  Helpers.cs  ObjectRuntime.cs  ObjectTemplate.cs  RecordTemplate.cs  StringHelper.cs  TopLevelFunctionTemplate.cs  Types.cs  macros.cs  wrapper.cs
dotnet-tests/UniffiCS.BindingTests/: TestCallbacksFixture.cs  TestCoverall.cs  TestObjects.cs  TestRondpoint.cs  TestSprites.cs  TestTodoList.cs  TestTraitMethod.cs
dotnet-tests/UniffiCS.binding_tests/: TestFutures.cs
fixtures/: Cargo.toml
fixtures/objects/: Cargo.toml
fixtures/objects/src/: lib.rs
fixtures/src/: lib.rs
